php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #26447 --with-openssl=shared -> parse error before `free_func'
Submitted: 2003-11-28 10:25 UTC Modified: 2003-11-29 07:08 UTC
From: nulleke at hotmail dot com Assigned:
Status: Closed Package: Compile Failure
PHP Version: 4.3.4 OS: *
Private report: No CVE-ID: None
 [2003-11-28 10:25 UTC] nulleke at hotmail dot com
Description:
------------
When compiling php 4.3.4 Errors complaining about crypto.h

Openssl version 0.9.7b
GCC 2.95.3

Reproduce code:
---------------
./configure  --prefix=/usr --with-apxs=/usr/sbin/apxs --with-db4=shared --with-config-file-path=/etc/httpd/conf --with-zlib --with-openssl=shared --with-mcrypt=shared --with-gd=shared --with-jpeg-dir=/usr --with-png-dir=/usr --with-xpm-dir=/usr/X11R6 --with-freetype-dir=/usr/local --with-ttf=/usr/local --with-pgsql=shared,/usr --enable-trans-sid --without-mysql --enable-gd-native-ttf --with-imap=shared --with-gettext=shared --enable-xslt --with-dom=/opt/gnome --with-expat-dir=/usr/local --with-xslt-sablot=/usr/local --with-pdflib=shared --with-mcal=shared,/usr --with-tiff-dir=/usr --with-dom-xslt=/opt/gnome --with-curl=shared --with-ming=shared --with-xml=shared --enable-exif --enable-wddx --with-calendar=shared --with-imap-ssl=/usr

Expected result:
----------------
That the build will finish.

Actual result:
--------------
/bin/sh /home/src/php-4.3.4/libtool --silent --preserve-dup-deps --mode=compile gcc  -Imain/ -I/home/src/php-4.3.4/main/ -DPHP_ATOM_INC -I/home/src/php-4.3.4/include -I/home/src/php-4.3.4/main -I/home/src/php-4.3.4 -I/home/src/php-4.3.4/Zend -I/opt/gnome/include/libxml2 -I/opt/gnome/include -I/usr/X11R6/include -I/usr/local/include -I/usr/local/include/freetype2 -I/usr/include/pgsql  -I/home/src/php-4.3.4/TSRM  -g -O2  -prefer-pic -c main/internal_functions.c -o main/internal_functions.lo
In file included from /usr/include/openssl/comp.h:5,
                 from /usr/include/openssl/ssl.h:171,
                 from main/php_network.h:78,
                 from /home/src/php-4.3.4/ext/standard/fsock.h:38,
                 from /home/src/php-4.3.4/ext/standard/php_standard.h:44,
                 from main/internal_functions.c:41:
/usr/include/openssl/crypto.h:358: parse error before `free_func'
/usr/include/openssl/crypto.h:358: parse error before `)'
/usr/include/openssl/crypto.h:363: parse error before `free_func'
/usr/include/openssl/crypto.h:363: parse error before `)'
In file included from /usr/include/openssl/rsa.h:62,
                 from /usr/include/openssl/evp.h:137,
                 from /usr/include/openssl/x509.h:67,
                 from /usr/include/openssl/ssl.h:177,
                 from main/php_network.h:78,
                 from /home/src/php-4.3.4/ext/standard/fsock.h:38,
                 from /home/src/php-4.3.4/ext/standard/php_standard.h:44,
                 from main/internal_functions.c:41:
/usr/include/openssl/asn1.h:802: parse error before `free_func'
/usr/include/openssl/asn1.h:802: `d2i_ASN1_SET' declared as function returning a function
/usr/include/openssl/asn1.h:803: parse error before `int'
/usr/include/openssl/asn1.h:907: parse error before `free_func'
/usr/include/openssl/asn1.h:907: parse error before `)'
In file included from /usr/include/openssl/evp.h:148,
                 from /usr/include/openssl/x509.h:67,
                 from /usr/include/openssl/ssl.h:177,
                 from main/php_network.h:78,
                 from /home/src/php-4.3.4/ext/standard/fsock.h:38,
                 from /home/src/php-4.3.4/ext/standard/php_standard.h:44,
                 from main/internal_functions.c:41:
/usr/include/openssl/objects.h:990: parse error before `free_func'
/usr/include/openssl/objects.h:990: parse error before `)'
make: *** [main/internal_functions.lo] Error 1

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2003-11-28 14:02 UTC] iliaa@php.net
Do you get the this error if you configure PHP with
./configure --disable-all --with-openssl ?
 [2003-11-28 15:03 UTC] nulleke at hotmail dot com
Build complete.
(It is safe to ignore warnings about tempnam and tmpnam).

So I don't get the error when configure --disable-all --enable-openssl.
 [2003-11-28 16:29 UTC] iliaa@php.net
Try to enable other extensions (one at a time) to determine which one causes the compile failure. I'd recommend not building openssl as shared as it is used by several other extensions you may be using.
 [2003-11-29 04:06 UTC] nulleke at hotmail dot com
When I remove the shared from openssl it will compile with ll the other extensions enabled.

Thanks for the help.
 [2003-11-29 07:07 UTC] sniper@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sun Sep 27 07:00:02 2026 UTC