- Fixed bug #26447 (--with-openssl=shared causes compile errors).NEWS